# ComfyUI-Kimodo

./: README.md  README_CN.md  __init__.py  kimodo_retarget_fbx.py  nodes.py  pyproject.toml  requirements.txt
kimodo/MotionCorrection/: .gitignore  README.md
kimodo/kimodo/: constraints.py  postprocess.py
kimodo/kimodo/model/: load_model.py
kimodo/kimodo/model/llm2vec/: llm2vec.py  llm2vec_wrapper.py
prebuilt/win_amd64_cp311/: _motion_correction.cp311-win_amd64.pyd
web/: kimodo_curve_editor.js  kimodo_curve_math.js  kimodo_draw_utils.js  kimodo_export_fbx.js  kimodo_load_motion.js  kimodo_viewer.js
workflows/: kimodo-basic.json  kimodo-fbx.json  kimodo-with-post-process.json  kimodo_motion.json
