[project]
name = "comfyui-kimodo"
description = "ComfyUI nodes for Kimodo — text-driven 3D human motion generation with kinematic constraints"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "peft>=0.18",
    "bvhio",
    "trimesh>=3.21.7",
    "scenepic>=1.1.0",
]

[project.urls]
Repository = "https://github.com/nv-tlabs/kimodo"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "ComfyUI-Kimodo"
Icon = ""
